--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-iced = { version = "0.13.1", features = ["canvas", "tokio"] }
+eframe = "0.29.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+xlsxwriter = "0.6.1"
+calamine = "0.19"
