--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ eframe = "0.29.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 xlsxwriter = "0.6.1"
-calamine = "0.19"
+calamine = "0.21.1"
+csv = "1.2"
